# postmarketos-theme

./: .gitignore  index.theme.in  meson.build
gtk-3.0/: _colors.scss  _common.scss  _drawing.scss  _handy.scss  _phosh.scss  meson.build  postmarketOS-dark.scss  postmarketOS-light.scss  postmarketOS-oled.scss  postmarketOS-paper.scss
gtk-3.0/handy/: _definitions.scss
gtk-4.0/: _colors.scss  _common.scss  meson.build  postmarketOS-oled.scss  postmarketOS-paper.scss  render-assets.sh
meson/: install-to-dir.py
